@@ -6,8 +6,8 @@ import processing.core.PImage;
  * An entity that exists in the world. See EntityKind for the
  * different kinds of entities that exist.
  */
-public final class Entity {
-    // Static variables
+public abstract class Entity {
+     //Static variables
     public static final double SAPLING_ACTION_ANIMATION_PERIOD = 1.000; // have to be in sync since grows and gains health at same time
     public static final int SAPLING_HEALTH_LIMIT = 5;
     public static final String STUMP_KEY = "stump";
@@ -23,8 +23,8 @@ public final class Entity {
     public static final int DUDE_ANIMATION_PERIOD = 1;
     public static final int DUDE_LIMIT = 2;
     public static final int DUDE_NUM_PROPERTIES = 3;
-    public static final String HOUSE_KEY = "house";
-    public static final int HOUSE_NUM_PROPERTIES = 0;
+    //    public static final String HOUSE_KEY = "house";
+//    public static final int HOUSE_NUM_PROPERTIES = 0;
     public static final String FAIRY_KEY = "fairy";
     public static final int FAIRY_ANIMATION_PERIOD = 0;
     public static final int FAIRY_ACTION_PERIOD = 1;
@@ -68,6 +68,13 @@ public final class Entity {
         this.healthLimit = healthLimit;
     }
 
+    public Entity(){
+    }
+
+    //abstract method called create that will apply to all of the subclasses.
+    public abstract Entity create(EntityKind kind, String id, Point position, List<PImage> images, int resourceLimit, int resourceCount, double actionPeriod, double animationPeriod, int health, int healthLimit);
+
+
     public static Optional<Entity> nearestEntity(List<Entity> entities, Point pos) {
         if (entities.isEmpty()) {
             return Optional.empty();
@@ -88,159 +95,159 @@ public final class Entity {
         }
     }
 
-    public PImage getCurrentImage(){
+    public PImage getCurrentImage() {
         return this.images.get(this.imageIndex % this.images.size());
     }
 
-    public Point nextPositionDude(WorldModel world, Point destPos) {
-        int horiz = Integer.signum(destPos.x - this.position.x);
-        Point newPos = new Point(this.position.x + horiz, this.position.y);
+//    public Point nextPositionDude(WorldModel world, Point destPos) {
+//        int horiz = Integer.signum(destPos.x - this.position.x);
+//        Point newPos = new Point(this.position.x + horiz, this.position.y);
+//
+//        if (horiz == 0 || world.isOccupied(newPos) && world.getOccupancyCell(newPos).kind != EntityKind.STUMP) {
+//            int vert = Integer.signum(destPos.y - this.position.y);
+//            newPos = new Point(this.position.x, this.position.y + vert);
+//
+//            if (vert == 0 || world.isOccupied(newPos) && world.getOccupancyCell(newPos).kind != EntityKind.STUMP) {
+//                newPos = this.position;
+//            }
+//        }
+//
+//        return newPos;
+//    }
 
-        if (horiz == 0 || world.isOccupied(newPos) && world.getOccupancyCell(newPos).kind != EntityKind.STUMP) {
-            int vert = Integer.signum(destPos.y - this.position.y);
-            newPos = new Point(this.position.x, this.position.y + vert);
+//    public Point nextPositionFairy(WorldModel world, Point destPos) {
+//        int horiz = Integer.signum(destPos.x - this.position.x);
+//        Point newPos = new Point(this.position.x + horiz, this.position.y);
+//
+//        if (horiz == 0 || world.isOccupied(newPos)) {
+//            int vert = Integer.signum(destPos.y - this.position.y);
+//            newPos = new Point(this.position.x, this.position.y + vert);
+//
+//            if (vert == 0 || world.isOccupied(newPos)) {
+//                newPos = this.position;
+//            }
+//        }
+//
+//        return newPos;
+//    }
 
-            if (vert == 0 || world.isOccupied(newPos) && world.getOccupancyCell(newPos).kind != EntityKind.STUMP) {
-                newPos = this.position;
-            }
-        }
+//    public boolean moveToFull(WorldModel world, Entity target, EventScheduler scheduler) {
+//        if (this.position.adjacent(target.position)) {
+//            return true;
+//        } else {
+//            Point nextPos = this.nextPositionDude(world, target.position);
+//
+//            if (!this.position.equals(nextPos)) {
+//                world.moveEntity(scheduler, this, nextPos);
+//            }
+//            return false;
+//        }
+//    }
 
-        return newPos;
-    }
+//    public boolean moveToNotFull(WorldModel world, Entity target, EventScheduler scheduler) {
+//        if (this.position.adjacent(target.position)) {
+//            this.resourceCount += 1;
+//            target.health--;
+//            return true;
+//        } else {
+//            Point nextPos = this.nextPositionDude(world, target.position);
+//
+//            if (!this.position.equals(nextPos)) {
+//                world.moveEntity(scheduler, this, nextPos);
+//            }
+//            return false;
+//        }
+//    }
 
-    public Point nextPositionFairy(WorldModel world, Point destPos) {
-        int horiz = Integer.signum(destPos.x - this.position.x);
-        Point newPos = new Point(this.position.x + horiz, this.position.y);
+//    public boolean moveToFairy(WorldModel world, Entity target, EventScheduler scheduler) {
+//        if (this.position.adjacent(target.position)) {
+//            world.removeEntity(scheduler, target);
+//            return true;
+//        } else {
+//            Point nextPos = this.nextPositionFairy(world, target.position);
+//
+//            if (!this.position.equals(nextPos)) {
+//                world.moveEntity(scheduler, this, nextPos);
+//            }
+//            return false;
+//        }
+//    }
 
-        if (horiz == 0 || world.isOccupied(newPos)) {
-            int vert = Integer.signum(destPos.y - this.position.y);
-            newPos = new Point(this.position.x, this.position.y + vert);
-
-            if (vert == 0 || world.isOccupied(newPos)) {
-                newPos = this.position;
-            }
-        }
-
-        return newPos;
-    }
-
-    public boolean moveToFull(WorldModel world, Entity target, EventScheduler scheduler) {
-        if (this.position.adjacent(target.position)) {
-            return true;
-        } else {
-            Point nextPos = this.nextPositionDude(world, target.position);
-
-            if (!this.position.equals(nextPos)) {
-                world.moveEntity(scheduler, this, nextPos);
-            }
-            return false;
-        }
-    }
-
-    public boolean moveToNotFull(WorldModel world, Entity target, EventScheduler scheduler) {
-        if (this.position.adjacent(target.position)) {
-            this.resourceCount += 1;
-            target.health--;
-            return true;
-        } else {
-            Point nextPos = this.nextPositionDude(world, target.position);
-
-            if (!this.position.equals(nextPos)) {
-                world.moveEntity(scheduler, this, nextPos);
-            }
-            return false;
-        }
-    }
-
-    public boolean moveToFairy(WorldModel world, Entity target, EventScheduler scheduler) {
-        if (this.position.adjacent(target.position)) {
-            world.removeEntity(scheduler, target);
-            return true;
-        } else {
-            Point nextPos = this.nextPositionFairy(world, target.position);
-
-            if (!this.position.equals(nextPos)) {
-                world.moveEntity(scheduler, this, nextPos);
-            }
-            return false;
-        }
-    }
-
-    public boolean transformSapling(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
-        if (this.health <= 0) {
-            Entity stump = createStump(STUMP_KEY + "_" + this.id, this.position, imageStore.getImageList(STUMP_KEY));
-
-            world.removeEntity(scheduler, this);
-
-            world.addEntity(stump);
-
-            return true;
-        } else if (this.health >= this.healthLimit) {
-            Entity tree = createTree(TREE_KEY + "_" + this.id, this.position, Functions.getNumFromRange(TREE_ACTION_MAX, TREE_ACTION_MIN), Functions.getNumFromRange(TREE_ANIMATION_MAX, TREE_ANIMATION_MIN), Functions.getIntFromRange(TREE_HEALTH_MAX, TREE_HEALTH_MIN), imageStore.getImageList(TREE_KEY));
-
-            world.removeEntity(scheduler, this);
-
-            world.addEntity(tree);
-            tree.scheduleActions(scheduler, world, imageStore);
-
-            return true;
-        }
-
-        return false;
-    }
+//    public boolean transformSapling(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
+//        if (this.health <= 0) {
+//            Entity stump = createStump(STUMP_KEY + "_" + this.id, this.position, imageStore.getImageList(STUMP_KEY));
+//
+//            world.removeEntity(scheduler, this);
+//
+//            world.addEntity(stump);
+//
+//            return true;
+//        } else if (this.health >= this.healthLimit) {
+//            Entity tree = createTree(TREE_KEY + "_" + this.id, this.position, Functions.getNumFromRange(TREE_ACTION_MAX, TREE_ACTION_MIN), Functions.getNumFromRange(TREE_ANIMATION_MAX, TREE_ANIMATION_MIN), Functions.getIntFromRange(TREE_HEALTH_MAX, TREE_HEALTH_MIN), imageStore.getImageList(TREE_KEY));
+//
+//            world.removeEntity(scheduler, this);
+//
+//            world.addEntity(tree);
+//            tree.scheduleActions(scheduler, world, imageStore);
+//
+//            return true;
+//        }
+//
+//        return false;
+//    }
 
     public void nextImage() {
         this.imageIndex = this.imageIndex + 1;
     }
 
-    public boolean transformTree(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
-        if (this.health <= 0) {
-            Entity stump = createStump(STUMP_KEY + "_" + this.id, this.position, imageStore.getImageList(STUMP_KEY));
+//    public boolean transformTree(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
+//        if (this.health <= 0) {
+//            Entity stump = createStump(STUMP_KEY + "_" + this.id, this.position, imageStore.getImageList(STUMP_KEY));
+//
+//            world.removeEntity(scheduler, this);
+//
+//            world.addEntity(stump);
+//
+//            return true;
+//        }
+//
+//        return false;
+//    }
 
-            world.removeEntity(scheduler, this);
+//    public boolean transformPlant(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
+//        if (this.kind == EntityKind.TREE) {
+//            return this.transformTree(world, scheduler, imageStore);
+//        } else if (this.kind == EntityKind.SAPLING) {
+//            return this.transformSapling(world, scheduler, imageStore);
+//        } else {
+//            throw new UnsupportedOperationException(String.format("transformPlant not supported for %s", this));
+//        }
+//    }
 
-            world.addEntity(stump);
+//    public void transformFull(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
+//        Entity dude = createDudeNotFull(this.id, this.position, this.actionPeriod, this.animationPeriod, this.resourceLimit, this.images);
+//
+//        world.removeEntity(scheduler, this);
+//
+//        world.addEntity(dude);
+//        dude.scheduleActions(scheduler, world, imageStore);
+//    }
 
-            return true;
-        }
-
-        return false;
-    }
-
-    public boolean transformPlant(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
-        if (this.kind == EntityKind.TREE) {
-            return this.transformTree(world, scheduler, imageStore);
-        } else if (this.kind == EntityKind.SAPLING) {
-            return this.transformSapling(world, scheduler, imageStore);
-        } else {
-            throw new UnsupportedOperationException(String.format("transformPlant not supported for %s", this));
-        }
-    }
-
-    public void transformFull(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
-        Entity dude = createDudeNotFull(this.id, this.position, this.actionPeriod, this.animationPeriod, this.resourceLimit, this.images);
-
-        world.removeEntity(scheduler, this);
-
-        world.addEntity(dude);
-        dude.scheduleActions(scheduler, world, imageStore);
-    }
-
-    public boolean transformNotFull(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
-        if (this.resourceCount >= this.resourceLimit) {
-            Entity dude = createDudeFull(this.id, this.position, this.actionPeriod, this.animationPeriod, this.resourceLimit, this.images);
-
-            world.removeEntity(scheduler, this);
-            scheduler.unscheduleAllEvents(this);
-
-            world.addEntity(dude);
-            dude.scheduleActions(scheduler, world, imageStore);
-
-            return true;
-        }
-
-        return false;
-    }
+//    public boolean transformNotFull(WorldModel world, EventScheduler scheduler, ImageStore imageStore) {
+//        if (this.resourceCount >= this.resourceLimit) {
+//            Entity dude = createDudeFull(this.id, this.position, this.actionPeriod, this.animationPeriod, this.resourceLimit, this.images);
+//
+//            world.removeEntity(scheduler, this);
+//            scheduler.unscheduleAllEvents(this);
+//
+//            world.addEntity(dude);
+//            dude.scheduleActions(scheduler, world, imageStore);
+//
+//            return true;
+//        }
+//
+//        return false;
+//    }
 
     public void scheduleActions(EventScheduler scheduler, WorldModel world, ImageStore imageStore) {
         switch (this.kind) {
@@ -277,56 +284,56 @@ public final class Entity {
         }
     }
 
-    public void executeDudeFullActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
-        Optional<Entity> fullTarget = world.findNearest(this.position, new ArrayList<>(List.of(EntityKind.HOUSE)));
+//    public void executeDudeFullActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
+//        Optional<Entity> fullTarget = world.findNearest(this.position, new ArrayList<>(List.of(EntityKind.HOUSE)));
+//
+//        if (fullTarget.isPresent() && this.moveToFull(world, fullTarget.get(), scheduler)) {
+//            this.transformFull(world, scheduler, imageStore);
+//        } else {
+//            scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
+//        }
+//    }
 
-        if (fullTarget.isPresent() && this.moveToFull(world, fullTarget.get(), scheduler)) {
-            this.transformFull(world, scheduler, imageStore);
-        } else {
-            scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
-        }
-    }
+//    public void executeDudeNotFullActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
+//        Optional<Entity> target = world.findNearest(this.position, new ArrayList<>(Arrays.asList(EntityKind.TREE, EntityKind.SAPLING)));
+//
+//        if (target.isEmpty() || !this.moveToNotFull(world, target.get(), scheduler) || !this.transformNotFull(world, scheduler, imageStore)) {
+//            scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
+//        }
+//    }
 
-    public void executeDudeNotFullActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
-        Optional<Entity> target = world.findNearest(this.position, new ArrayList<>(Arrays.asList(EntityKind.TREE, EntityKind.SAPLING)));
+//    public void executeFairyActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
+//        Optional<Entity> fairyTarget = world.findNearest(this.position, new ArrayList<>(List.of(EntityKind.STUMP)));
+//
+//        if (fairyTarget.isPresent()) {
+//            Point tgtPos = fairyTarget.get().position;
+//
+//            if (this.moveToFairy(world, fairyTarget.get(), scheduler)) {
+//
+//                Entity sapling = createSapling(SAPLING_KEY + "_" + fairyTarget.get().id, tgtPos, imageStore.getImageList(SAPLING_KEY), 0);
+//
+//                world.addEntity(sapling);
+//                sapling.scheduleActions(scheduler, world, imageStore);
+//            }
+//        }
+//
+//        scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
+//    }
 
-        if (target.isEmpty() || !this.moveToNotFull(world, target.get(), scheduler) || !this.transformNotFull(world, scheduler, imageStore)) {
-            scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
-        }
-    }
+//    public void executeTreeActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
+//
+//        if (!this.transformPlant(world, scheduler, imageStore)) {
+//
+//            scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
+//        }
+//    }
 
-    public void executeFairyActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
-        Optional<Entity> fairyTarget = world.findNearest(this.position, new ArrayList<>(List.of(EntityKind.STUMP)));
-
-        if (fairyTarget.isPresent()) {
-            Point tgtPos = fairyTarget.get().position;
-
-            if (this.moveToFairy(world, fairyTarget.get(), scheduler)) {
-
-                Entity sapling = createSapling(SAPLING_KEY + "_" + fairyTarget.get().id, tgtPos, imageStore.getImageList(SAPLING_KEY), 0);
-
-                world.addEntity(sapling);
-                sapling.scheduleActions(scheduler, world, imageStore);
-            }
-        }
-
-        scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
-    }
-
-    public void executeTreeActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
-
-        if (!this.transformPlant(world, scheduler, imageStore)) {
-
-            scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
-        }
-    }
-
-    public void executeSaplingActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
-        this.health++;
-        if (!this.transformPlant(world, scheduler, imageStore)) {
-            scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
-        }
-    }
+//    public void executeSaplingActivity(WorldModel world, ImageStore imageStore, EventScheduler scheduler) {
+//        this.health++;
+//        if (!this.transformPlant(world, scheduler, imageStore)) {
+//            scheduler.scheduleEvent(this, Action.createActivityAction(this, world, imageStore), this.actionPeriod);
+//        }
+//    }
 
     public double getAnimationPeriod() {
         return switch (this.kind) {
@@ -339,42 +346,43 @@ public final class Entity {
     /**
      * Helper method for testing. Preserve this functionality while refactoring.
      */
-    public String log(){
+    public String log() {
         return this.id.isEmpty() ? null :
                 String.format("%s %d %d %d", this.id, this.position.x, this.position.y, this.imageIndex);
     }
 
-    public static Entity createHouse(String id, Point position, List<PImage> images) {
-        return new Entity(EntityKind.HOUSE, id, position, images, 0, 0, 0, 0, 0, 0);
-    }
+//    public static Entity createHouse(String id, Point position, List<PImage> images) {
+//        return new Entity(EntityKind.HOUSE, id, position, images, 0, 0, 0, 0, 0, 0);
+//    }
 
-    public static Entity createObstacle(String id, Point position, double animationPeriod, List<PImage> images) {
-        return new Entity(EntityKind.OBSTACLE, id, position, images, 0, 0, 0, animationPeriod, 0, 0);
-    }
+//    public static Entity createObstacle(String id, Point position, double animationPeriod, List<PImage> images) {
+//        return new Entity(EntityKind.OBSTACLE, id, position, images, 0, 0, 0, animationPeriod, 0, 0);
+//    }
 
-    public static Entity createTree(String id, Point position, double actionPeriod, double animationPeriod, int health, List<PImage> images) {
-        return new Entity(EntityKind.TREE, id, position, images, 0, 0, actionPeriod, animationPeriod, health, 0);
-    }
+//    public static Entity createTree(String id, Point position, double actionPeriod, double animationPeriod, int health, List<PImage> images) {
+//        return new Entity(EntityKind.TREE, id, position, images, 0, 0, actionPeriod, animationPeriod, health, 0);
+//    }
 
-    public static Entity createStump(String id, Point position, List<PImage> images) {
-        return new Entity(EntityKind.STUMP, id, position, images, 0, 0, 0, 0, 0, 0);
-    }
+//    public static Entity createStump(String id, Point position, List<PImage> images) {
+//        return new Entity(EntityKind.STUMP, id, position, images, 0, 0, 0, 0, 0, 0);
+//    }
 
     // health starts at 0 and builds up until ready to convert to Tree
-    public static Entity createSapling(String id, Point position, List<PImage> images, int health) {
-        return new Entity(EntityKind.SAPLING, id, position, images, 0, 0, SAPLING_ACTION_ANIMATION_PERIOD, SAPLING_ACTION_ANIMATION_PERIOD, 0, SAPLING_HEALTH_LIMIT);
-    }
+//    public static Entity createSapling(String id, Point position, List<PImage> images, int health) {
+//        return new Entity(EntityKind.SAPLING, id, position, images, 0, 0, SAPLING_ACTION_ANIMATION_PERIOD, SAPLING_ACTION_ANIMATION_PERIOD, 0, SAPLING_HEALTH_LIMIT);
+//    }
 
-    public static Entity createFairy(String id, Point position, double actionPeriod, double animationPeriod, List<PImage> images) {
-        return new Entity(EntityKind.FAIRY, id, position, images, 0, 0, actionPeriod, animationPeriod, 0, 0);
-    }
+//    public static Entity createFairy(String id, Point position, double actionPeriod, double animationPeriod, List<PImage> images) {
+//        return new Entity(EntityKind.FAIRY, id, position, images, 0, 0, actionPeriod, animationPeriod, 0, 0);
+//    }
 
     // need resource count, though it always starts at 0
-    public static Entity createDudeNotFull(String id, Point position, double actionPeriod, double animationPeriod, int resourceLimit, List<PImage> images) {
-        return new Entity(EntityKind.DUDE_NOT_FULL, id, position, images, resourceLimit, 0, actionPeriod, animationPeriod, 0, 0);
-    }
+//    public static Entity createDudeNotFull(String id, Point position, double actionPeriod, double animationPeriod, int resourceLimit, List<PImage> images) {
+//        return new Entity(EntityKind.DUDE_NOT_FULL, id, position, images, resourceLimit, 0, actionPeriod, animationPeriod, 0, 0);
+//    }
 
-    public static Entity createDudeFull(String id, Point position, double actionPeriod, double animationPeriod, int resourceLimit, List<PImage> images) {
-        return new Entity(EntityKind.DUDE_FULL, id, position, images, resourceLimit, 0, actionPeriod, animationPeriod, 0, 0);
-    }
+//    public static Entity createDudeFull(String id, Point position, double actionPeriod, double animationPeriod, int resourceLimit, List<PImage> images) {
+//        return new Entity(EntityKind.DUDE_FULL, id, position, images, resourceLimit, 0, actionPeriod, animationPeriod, 0, 0);
+//    }
+
 }
